Fix vertical overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,17 +16,6 @@
 
 /* Columns */
 
-.col {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    height: 100vh;
-}
-
 .header {
     width: 100%;
     background: var(--contentBackgroundColour);
@@ -38,19 +27,7 @@ label {
     text-align: left;
 }
 
-input {
-    display: block;
-    background: transparent;
-    font-size: 1rem;
-    border: solid 1.5px #fff;
-    border-radius: 5px;
-    line-height: 1.5;
-    padding: 0.5em 1em;
-    color: var(--textColourSecondary);
-    font-weight: 300;
-    margin-top: 2em;
-    width: 100%;
-}
+input {}
 
 input.valid {
     border: solid 1.5px #82DDA9;
@@ -117,4 +94,26 @@ ul {
 
 .colour-list:hover .colour-add {
     opacity: 1;
+}
+
+@-webkit-keyframes fx {
+    50% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes fx {
+    50% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
